# Kanon

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  clean_audit.py  from .intent import Intent, Objective, Constraint  kanon_audit.log.legacy  pyproject.toml  test_enforcement.py  verify_audit.py
.cargo/: config.toml
kanon_sdk/: __init__.py  intent.py  kanon_core.pyd  observer.py
kanon_sdk/kanon_core/: __init__.py
kanon_thinktank/: __init__.py  agent.py  blackboard.py  orchestrator.py
src/kanon_core/: .agents.md  .gitignore  Cargo.toml  README.md  pyproject.toml
src/kanon_core/examples/: hello_intent.py  stress_test.py
src/kanon_core/src/: lib.rs
