[package]
name = "kanon-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "kanon_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pyo3 = { version = "0.27.0", features = ["extension-module", "abi3-py38"] }
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
hex = "0.4"
