[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "kanon"
version = "0.1.0"
description = "Python SDK for the Kanon Intent Engine"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "kanon.kanon_core"